Fixed grid layout bug + added proper hover effect
grid would sometimes not calculate right and push boxes onto another level.
squares properly change color only when moused over

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-.box{
-    border: 1px solid black;
+body{
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: beige;
 }
 
-.box:hover{
-    background-color: aqua;
+.box{
+    border: 1px solid black;
 }
 
 #grid{
